--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "enhanced-resolve": "^4.0.0-beta.4"
+    "enhanced-resolve": "^3.4.1"
   },
   "devDependencies": {
     "eslint": "^4.15.0",
