--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Customize postcss-import resolve with enhanced-resolve",
   "main": "index.js",
+  "types": "index.d.ts",
   "repository": "git+https://github.com/clarkdo/postcss-import-resolver.git",
   "author": "Clark Du",
   "license": "MIT",
